--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
+version: 0.1.1+1
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^0.13.4
   dio: ^4.0.4
+  progress_indicators: ^1.0.0
+  shared_preferences: ^2.0.11
 
 dev_dependencies:
   flutter_test:
@@ -47,6 +49,14 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
+  flutter_launcher_icons: "^0.9.0"
+
+flutter_icons:
+  image_path: "assets/icon.png" 
+  android: true
+  ios: true
+  # optionally, as transparency is not allowed on app store
+  # remove_alpha_ios: true
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -60,6 +70,16 @@ flutter:
   uses-material-design: true
   assets:
     - profile.png
+    - exchange.png
+    # - bitcoin.png
+    - assets/coins/
+  fonts:
+    - family: kredit
+      fonts:
+        - asset: fonts/kredit.ttf
+    - family: iransans
+      fonts:
+        - asset: fonts/iransans.ttf
 
   # To add assets to your application, add an assets section, like this:
   # assets:
